--- a/codeception.yml
+++ b/codeception.yml
@@ -1,7 +1,7 @@
 # global codeception file to run tests from all apps
 include:
     - common
-    - frontend
+    # - frontend
     - backend
 paths:
     output: console/runtime/output
