--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# yii console commands
-# /yii
-# /yii_test
-# /yii_test.bat
-
 # phpstorm project files
 .idea
 
@@ -34,10 +29,6 @@ phpunit.phar
 # vagrant runtime
 /.vagrant
 
-# ignore generated files
-# /frontend/web/index.php
-# /frontend/web/index-test.php
+# robots
 /frontend/web/robots.txt
-# /backend/web/index.php
-# /backend/web/index-test.php
 /backend/web/robots.txt
