--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,22 +1,39 @@
 <?xml version="1.0"?>
 <ruleset>
+    <!-- enable PSR12 mod -->
     <rule ref="PSR12"/>
 
+    <!-- enable sniff only this extensions -->
     <arg name="extensions" value="php"/>
+    <!-- enable colors mod -->
     <arg name="colors"/>
+    <!-- enable paraller mod -->
     <arg name="parallel" value="75"/>
+    <!-- enable show rules -->
     <arg value="sp"/>
 
+    <!-- disable sniff for this patterns -->
     <exclude-pattern>*/views/*</exclude-pattern>
     <exclude-pattern>*/tests/_support/*</exclude-pattern>
     <exclude-pattern>*/tests/_output/*</exclude-pattern>
     <exclude-pattern>*/*\.(inc|css|js)$</exclude-pattern>
-    
+    <exclude-pattern>*/__autocomplete.php</exclude-pattern>
+
+    <!-- include directory for sniff -->
     <file>backend</file>
-    <!-- <file>console</file>
-    <file>common</file> -->
+    <file>console</file>
+    <file>common</file>
+
+    
+    <rule ref="PSR2.Methods.MethodDeclaration.Underscore">
+        <exclude-pattern>*/tests/*</exclude-pattern>
+    </rule>
+
+    <rule ref="PSR1.Files.SideEffects">
+        <exclude name="PSR1.Files.SideEffects.FoundWithSymbols"/>
+    </rule>
+
     <rule ref="Generic.Files.LineEndings">
-    <exclude name="Generic.Files.LineEndings.InvalidEOLChar"/>
-    <exclude name="PSR1.Files.SideEffects.FoundWithSymbols"/>
-</rule>
+        <exclude name="Generic.Files.LineEndings.InvalidEOLChar"/>
+    </rule>
 </ruleset>
