configure phpcs for migrations files

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -29,6 +29,18 @@
         <exclude-pattern>*/tests/*</exclude-pattern>
     </rule>
 
+    <rule ref="PSR1.Classes.ClassDeclaration.MissingNamespace">
+        <exclude-pattern>*/migrations/*</exclude-pattern>
+    </rule>
+
+    <rule ref="PSR12.Files.ImportStatement.LeadingSlash">
+        <exclude-pattern>*/migrations/*</exclude-pattern>
+    </rule>
+
+    <rule ref="Squiz.Classes.ValidClassName.NotCamelCaps">
+        <exclude-pattern>*/migrations/*</exclude-pattern>
+    </rule>
+
     <rule ref="PSR1.Files.SideEffects">
         <exclude name="PSR1.Files.SideEffects.FoundWithSymbols"/>
     </rule>
