--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
             "composer codecept"
         ],
         "codecept": "./vendor/bin/codecept run",
-        "phpstan": "./vendor/bin/phpstan analyse --xdebug",
+        "phpstan": "./vendor/bin/phpstan analyse",
         "phpcs": "./vendor/bin/phpcs -p -w",
         "phpcbf": "./vendor/bin/phpcbf -p -w"
     },
