--- a/composer.json
+++ b/composer.json
@@ -46,8 +46,9 @@
         "codeception/module-filesystem": "^2.0 || ^1.1",
         "codeception/verify": "^2.2",
         "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4",
-        "phpstan/phpstan": "^1.9",
-        "squizlabs/php_codesniffer": "*"
+        "phpstan/phpstan": "*",
+        "squizlabs/php_codesniffer": "*",
+        "proget-hq/phpstan-yii2": "^0.8.0"
     },
     "autoload-dev": {
         "psr-4": {
