--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
             "composer phpstan"
         ],
         "codecept": "./vendor/bin/codecept run",
+        "codecept-debug": "./vendor/bin/codecept run --debug",
         "phpstan": "./vendor/bin/phpstan analyse",
         "phpcs": "./vendor/bin/phpcs -p -w",
         "phpcbf": "./vendor/bin/phpcbf -p -w"
@@ -33,7 +34,8 @@
         "php": ">=7.4.0",
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
-        "yiisoft/yii2-symfonymailer": "~2.0.3"
+        "yiisoft/yii2-symfonymailer": "~2.0.3",
+        "elisdn/yii2-composite-form": "^1.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
