--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.4.0",
+        "php": ">=8.1",
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
@@ -41,17 +41,18 @@
         "yiisoft/yii2-debug": "~2.1.0",
         "yiisoft/yii2-gii": "~2.2.0",
         "yiisoft/yii2-faker": "~2.0.0",
-        "phpunit/phpunit": "~9.5.0",
-        "codeception/codeception": "^5.0.0 || ^4.0",
-        "codeception/lib-innerbrowser": "^3.0 || ^1.1",
-        "codeception/module-asserts": "^3.0 || ^1.1",
-        "codeception/module-yii2": "^1.1",
-        "codeception/module-filesystem": "^2.0 || ^1.1",
-        "codeception/verify": "^2.2",
-        "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4",
-        "phpstan/phpstan": "*",
-        "squizlabs/php_codesniffer": "*",
-        "proget-hq/phpstan-yii2": "^0.8.0"
+        "phpunit/phpunit": "^10.1.2",
+        "codeception/codeception": "^5.0.10",
+        "codeception/lib-innerbrowser": "^4.0.0",
+        "codeception/module-asserts": "^3.0.0",
+        "codeception/module-yii2": "^1.1.8",
+        "codeception/module-filesystem": "^3.0.0",
+        "codeception/verify": "^3.0.0",
+        "phpstan/phpstan": "^1.10.14",
+        "squizlabs/php_codesniffer": "^3.7.2",
+        "proget-hq/phpstan-yii2": "^0.8.0",
+        "codeception/module-rest": "^3.3",
+        "codeception/module-phpbrowser": "^3.0"
     },
     "autoload-dev": {
         "psr-4": {
