--- a/docker/nginx/conf.d/vhost.conf
+++ b/docker/nginx/conf.d/vhost.conf
@@ -27,10 +27,10 @@ server {
     server_name testapi.birqsil.ru;
 
     root /var/www/app/backend/web;
-    index index-test.php;
+    index index_test.php;
 
     location / {
-        try_files $uri $uri/ /index-test.php?$query_string;
+        try_files $uri $uri/ /index_test.php?$query_string;
     }
 
     error_log /var/log/nginx/app.error.log;
@@ -40,7 +40,7 @@ server {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
-        fastcgi_index index.php;
+        fastcgi_index index_test.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_script_name;
