--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         ],
         "codecept": "./vendor/bin/codecept run",
         "codecept-debug": "./vendor/bin/codecept run --debug",
+        "codecept-backend-api": "./vendor/bin/codecept run -- -c backend api",
         "phpstan": "./vendor/bin/phpstan analyse",
         "phpcs": "./vendor/bin/phpcs -p -w",
         "phpcbf": "./vendor/bin/phpcbf -p -w"
