--- a/backend/tests/api.suite.yml
+++ b/backend/tests/api.suite.yml
@@ -7,5 +7,5 @@ modules:
     - REST:
         depends: PhpBrowser
         url: http://testapi.birqsil.ru
-#        url: nginx
+#        url: http://nginx
         part: Json
