--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,12 @@
             "composer codecept",
             "composer phpstan"
         ],
-        "codecept": "./vendor/bin/codecept run",
         "codecept-debug": "./vendor/bin/codecept run --debug",
+        "codecept": "./vendor/bin/codecept run",
+        "codecept-backend": "./vendor/bin/codecept run -- -c backend",
         "codecept-backend-api": "./vendor/bin/codecept run -- -c backend api",
+        "codecept-backend-unit": "./vendor/bin/codecept run -- -c backend unit",
+        "codecept-common": "./vendor/bin/codecept run -- -c common",
         "phpstan": "./vendor/bin/phpstan analyse",
         "phpcs": "./vendor/bin/phpcs -p -w",
         "phpcbf": "./vendor/bin/phpcbf -p -w"
