--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
-        "elisdn/yii2-composite-form": "^1.1"
+        "elisdn/yii2-composite-form": "^1.1",
+        "chillerlan/php-qrcode": "^4.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
