--- a/docker/nginx/conf.d/vhost.conf
+++ b/docker/nginx/conf.d/vhost.conf
@@ -47,3 +47,28 @@ server {
         fastcgi_read_timeout 1200;
     }
 }
+
+server {
+    server_name birqsil.ru;
+
+    root /var/www/app/frontend/web;
+    index index.php;
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    error_log /var/log/nginx/app.error.log;
+    access_log /var/log/nginx/app.access.log combined if=$loggable;
+
+    location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass php:9000;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param PATH_INFO $fastcgi_script_name;
+            fastcgi_read_timeout 1200;
+        }
+}
