setup frontend app

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "codecept-backend": "./vendor/bin/codecept run -- -c backend",
         "codecept-backend-api": "./vendor/bin/codecept run -- -c backend api",
         "codecept-backend-unit": "./vendor/bin/codecept run -- -c backend unit",
+        "codecept-frontend": "./vendor/bin/codecept run -- -c frontend",
+        "codecept-frontend-api": "./vendor/bin/codecept run -- -c frontend api",
+        "codecept-frontend-unit": "./vendor/bin/codecept run -- -c frontend unit",
         "codecept-common": "./vendor/bin/codecept run -- -c common",
         "phpstan": "./vendor/bin/phpstan analyse",
         "phpcs": "./vendor/bin/phpcs -p -w",
