--- a/frontend/tests/unit.suite.yml
+++ b/frontend/tests/unit.suite.yml
@@ -2,6 +2,4 @@ suite_namespace: frontend\tests\unit
 actor: UnitTester
 modules:
     enabled:
-        - Yii2:
-            part: [orm, email, fixtures]
-        - Asserts
+        - Yii2
