--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
         DOCKER_PHP_VERSION: '8.2'
         DOCKER_PHP_ENABLE_XDEBUG: 'on'
         DOCKER_PHP_XDEBUG_VERSION: '2.9.2'
-    working_dir: /var/www
+    working_dir: /var/www/app
     container_name: php
     volumes:
       - .:/var/www/app
