--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "elisdn/yii2-composite-form": "^1.1",
-        "endroid/qr-code": "^4.8"
+        "endroid/qr-code": "^4.8",
+      "ext-openssl": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
