--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ phpunit.phar
 /docker/mysql/data
 /docker/mysql/data_test
 /docker/nginx/logs
+
+# local configs
+
+/backend/config/local.php
+/frontend/config/local.php
+/console/config/local.php
+/common/config/local.php
